fix email/subscribe on firefox mobile

--- a/css/main.css
+++ b/css/main.css
@@ -262,7 +262,16 @@ input:focus:-ms-input-placeholder { color:transparent;  } /* IE 10+ */
     .date {
       font-size: 1.3em;
     }
-    
+
+    #mc_embed_signup .email {
+      font-size: 1em;
+    }
+
+    #mc_embed_signup .button {
+      font-size: 1em;
+      margin-left: 0;
+    }
+
     .robots > img {
       width: 5em;
     }
